--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>profile</title>
-	<link rel="stylesheet" type="text/css" href="../gvjfiyvkjblog file/untitled-30.css">
+	<link rel="stylesheet" type="text/css" href="index.css">
 </head>
 
 <body> <br>
